# AAI-chest-x-ray

./: .gitignore  main.py  no_letters.ipynb  pyproject.toml  pytorch_test.ipynb
sort_after_letters/: teks_mekring_on_billeder.ipynb
